--- a/Yuanhuan_Deng.html
+++ b/Yuanhuan_Deng.html
@@ -12,7 +12,7 @@
     <body>
         <h1><a href="https://www.instagram.com/toogoodtobeo/" ><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" height = 32px width = 32px  alt="Instagram">Yuanhuan Deng</a></h1>
         <h2>My Best Photo:</h2>
-        <img src="Yuanhuan_Deng.jpg"  width="300" height="auto" alt="Yuanhuan Deng">
+        <img src="Yuanhuan_Deng.JPG"  width="300" height="auto" alt="Yuanhuan Deng">
         <h2>Self Intro:</h2>
         <p>😁I am from Chongqing🚠, China and currently a first-year graduate student in MS4 program. I finished my bachelor's degree in Public Administration at Sun Yat-Sen University </p>
         <p>😪Also an expert in Sleeping</p>
