--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
         </ul>
         <h2>What I hate to eat:</h2>
         <ul>
-            <li>Sherman</li>
-            <li>Usdan</li>
+            <li>Any Dining Hall in 🤫</li>
         </ul>
        
         
