--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
         <ul>
             <li>Any Dining Hall in 🤫</li>
         </ul>
-       
+        <h2>My 🐶's photo:</h2>
+        <img src="baby2.jpg"  width="300" height="auto" alt="dog">
+        <img src="baby1.jpg"  width="300" height="auto" alt="dog">
         
     </body>
 </html>
