--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>Self Intro:</h2>
         <p>😁I am from Chongqing🚠, China and currently a first-year graduate student in MS4 program. I finished my bachelor's degree in Public Administration at Sun Yat-Sen University </p>
         <p>😪Also an expert in Sleeping</p>
-        <p>🤯Most important: A dog lover🦮 You will see my dog's photo below</p>
+        <p>🤯Most important: A dog lover🦮 You will see her photos below</p>
         <h2>My Basic Info:</h2>
         <table width="100%" border="1">
             <tr align="center">
