--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2>What I do in my spare time:</h2>
         <ul>
             <li>Drum🥁</li>
-            <li>Finding Authentic <em><b>Sichuan</b></em> and <em><b>Cantonese</b></em> Cuisine in the Culinary Desert of Boston😊</li>
+            <li>Searching for Authentic <em><b>Sichuan</b></em> and <em><b>Cantonese</b></em> Cuisine in the Culinary Desert of Boston😊</li>
             <li>Strolling aimlessly🚶‍♀️</li>
         </ul>
         <h2>My favorite food:</h2>
